# vuzo_parser

./: .env.example  .gitignore  Dockerfile  GEMINI.md  README.md  VUZ_WEBSITE_AND_PARSING_RULES.md  alembic.ini  config.py  data.json  docker-compose.yaml  logging_config.py  main.py  pyproject.toml  states.py  vuz_parser.py  vuzoparser.db
alembic/: env.py
alembic/versions/: 418006bb708f_initial_database_setup.py  c12e5419145c_add_user_code_to_user_directions.py
database/: db.py
format/: vuz_stats.py
handlers/: start.py
keyboards/: inline.py
middleware/: access.py  db.py  logging.py
models/: __init__.py  universities.py  universities_directions.py  user_directions.py  users.py
repository/: base.py  universities.py  users.py
tests/: test_parsers.py
utils/: broadcast.py  decorators.py  handlers.py
