[project]
name = "vuzo-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "aiohttp-socks>=0.11.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "pyright>=1.1.411",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
